Add youtube channel

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -23,6 +23,7 @@
                 <ul class="actions">
                     <li><a href="#one" class="button next scrolly">Look Inside</a></li>
                 </ul>
+			<a target="_blank" rel="noopener noreferrer" href="https://www.youtube.com/@cgrlab" class="button next scrolly">Youtube Channel</a>
             </div>
         </div>
     </section>
